# anonymization-app

./: Dockerfile  Pipfile  README.md  demo.py  main.py  pyproject.toml
.github/: prod.workflow.yml
.github/workflows/: main_anonymization-app.yml
